--- a/src/global/global_style.scss
+++ b/src/global/global_style.scss
@@ -54,6 +54,7 @@
         border: none;
         //appearance: none; // Possibly too harsh
         touch-action: manipulation;
+        font-size: inherit;
     }
 }
 
