--- a/src/gallery/module/module.scss
+++ b/src/gallery/module/module.scss
@@ -15,6 +15,16 @@
 }
 // NOTE: grid-auto-rows could be 20vh, but that is zoom invariant
 
+// Background image:
+body {
+    background-attachment: fixed; // Also consider scroll
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("./costelas.png");
+}
+
+
 // Unfocused state:
 .gallery-item {
     img {
@@ -22,9 +32,17 @@
         height: 100%;
         object-fit: cover; 
         cursor: pointer;
+        transition: opacity 0.3s ease-out; // Changes to 0 when overlay is active, via module.js
+        box-shadow: 1px 2px 4px 2px rgba(0, 0, 0, 0.25);
     }
-    background-color: var(--gray);
-    transition: opacity 0.3s ease-out; // Changes to 0 when overlay is active, via module.js
+}
+
+// Hole item:
+.gallery-hole {
+    background-image: url("./costelas.png");
+    background-size: cover;
+    background-position: center;
+    opacity: 0.6;
 }
 
 
